--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.56.1
 httplib2==0.20.4
 idna==3.3
+mysqlclient==2.1.0
 Pillow==9.1.0
 protobuf==3.20.1
 pyasn1==0.4.8
